Added some code

--- a/TeklaConsole/TeklaConsole.csproj
+++ b/TeklaConsole/TeklaConsole.csproj
@@ -80,6 +80,12 @@
     <None Include="App.config" />
     <None Include="packages.config" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\HelperMethods\HelperMethods.csproj">
+      <Project>{4307f268-13e0-4be8-ac5a-cc453d1d27d8}</Project>
+      <Name>HelperMethods</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
     <PropertyGroup>
