--- a/ExtensionMethods/ExtensionMethods.csproj
+++ b/ExtensionMethods/ExtensionMethods.csproj
@@ -5,19 +5,18 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{ED6730AC-3AD2-4DE4-892D-DD2C3D86B61D}</ProjectGuid>
-    <OutputType>Exe</OutputType>
-    <RootNamespace>TeklaConsole</RootNamespace>
-    <AssemblyName>TeklaConsole</AssemblyName>
+    <ProjectGuid>{B94799FC-FF52-4B67-9826-37B82CDADD16}</ProjectGuid>
+    <OutputType>Library</OutputType>
+    <AppDesignerFolder>Properties</AppDesignerFolder>
+    <RootNamespace>ExtensionMethods</RootNamespace>
+    <AssemblyName>ExtensionMethods</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
-    <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
     <Deterministic>true</Deterministic>
     <NuGetPackageImportStamp>
     </NuGetPackageImportStamp>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
@@ -27,7 +26,6 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
     <OutputPath>bin\Release\</OutputPath>
@@ -46,38 +44,46 @@
     <Reference Include="System.Xml" />
     <Reference Include="Tekla.Application.Library, Version=2020.0.0.0, Culture=neutral, PublicKeyToken=2f04dbe497b71114, processorArchitecture=MSIL">
       <HintPath>..\packages\TeklaOpenAPI.2020.0.3\lib\Tekla.Application.Library.dll</HintPath>
+      <Private>False</Private>
     </Reference>
     <Reference Include="Tekla.Structures, Version=2020.0.0.0, Culture=neutral, PublicKeyToken=2f04dbe497b71114, processorArchitecture=MSIL">
       <HintPath>..\packages\TeklaOpenAPI.2020.0.3\lib\Tekla.Structures.dll</HintPath>
+      <Private>False</Private>
     </Reference>
     <Reference Include="Tekla.Structures.Analysis, Version=2020.0.0.0, Culture=neutral, PublicKeyToken=2f04dbe497b71114, processorArchitecture=MSIL">
       <HintPath>..\packages\TeklaOpenAPI.2020.0.3\lib\Tekla.Structures.Analysis.dll</HintPath>
+      <Private>False</Private>
     </Reference>
     <Reference Include="Tekla.Structures.Catalogs, Version=2020.0.0.0, Culture=neutral, PublicKeyToken=2f04dbe497b71114, processorArchitecture=MSIL">
       <HintPath>..\packages\TeklaOpenAPI.2020.0.3\lib\Tekla.Structures.Catalogs.dll</HintPath>
+      <Private>False</Private>
     </Reference>
     <Reference Include="Tekla.Structures.Datatype, Version=2020.0.0.0, Culture=neutral, PublicKeyToken=2f04dbe497b71114, processorArchitecture=MSIL">
       <HintPath>..\packages\TeklaOpenAPI.2020.0.3\lib\Tekla.Structures.Datatype.dll</HintPath>
+      <Private>False</Private>
     </Reference>
     <Reference Include="Tekla.Structures.Dialog, Version=2020.0.0.0, Culture=neutral, PublicKeyToken=2f04dbe497b71114, processorArchitecture=MSIL">
       <HintPath>..\packages\TeklaOpenAPI.2020.0.3\lib\Tekla.Structures.Dialog.dll</HintPath>
+      <Private>False</Private>
     </Reference>
     <Reference Include="Tekla.Structures.Drawing, Version=2020.0.0.0, Culture=neutral, PublicKeyToken=2f04dbe497b71114, processorArchitecture=MSIL">
       <HintPath>..\packages\TeklaOpenAPI.2020.0.3\lib\Tekla.Structures.Drawing.dll</HintPath>
+      <Private>False</Private>
     </Reference>
     <Reference Include="Tekla.Structures.Model, Version=2020.0.0.0, Culture=neutral, PublicKeyToken=2f04dbe497b71114, processorArchitecture=MSIL">
       <HintPath>..\packages\TeklaOpenAPI.2020.0.3\lib\Tekla.Structures.Model.dll</HintPath>
+      <Private>False</Private>
     </Reference>
     <Reference Include="Tekla.Structures.Plugins, Version=2020.0.0.0, Culture=neutral, PublicKeyToken=2f04dbe497b71114, processorArchitecture=MSIL">
       <HintPath>..\packages\TeklaOpenAPI.2020.0.3\lib\Tekla.Structures.Plugins.dll</HintPath>
+      <Private>False</Private>
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TeklaExtensionMethods.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="App.config" />
     <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
