--- a/Specifikacijas/Specifikacijas.csproj
+++ b/Specifikacijas/Specifikacijas.csproj
@@ -236,6 +236,7 @@
   <ItemGroup>
     <Compile Include="Clases\TeraudaElements.cs" />
     <Compile Include="ExportToExcel.cs" />
+    <Compile Include="NPOI_Helpers\NpoiStaticHelperMethods.cs" />
     <Compile Include="Specifikacijas.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="FileAccess\WorkingWithFIles.cs" />
