--- a/ExtensionMethods/packages.config
+++ b/ExtensionMethods/packages.config
@@ -1,4 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="TeklaOpenAPI" version="2020.0.3" targetFramework="net472" />
+  <package id="Tekla.Structures" version="2021.0.0" targetFramework="net472" />
+  <package id="Tekla.Structures.Datatype" version="2021.0.0" targetFramework="net472" />
+  <package id="Tekla.Structures.Model" version="2021.0.0" targetFramework="net472" />
 </packages>
