--- a/Specifikacijas/packages.config
+++ b/Specifikacijas/packages.config
@@ -51,5 +51,7 @@
   <package id="System.Threading.Timer" version="4.3.0" targetFramework="net472" />
   <package id="System.Xml.ReaderWriter" version="4.3.0" targetFramework="net472" />
   <package id="System.Xml.XDocument" version="4.3.0" targetFramework="net472" />
-  <package id="TeklaOpenAPI" version="2020.0.3" targetFramework="net472" />
+  <package id="Tekla.Structures" version="2021.0.0" targetFramework="net472" />
+  <package id="Tekla.Structures.Datatype" version="2021.0.0" targetFramework="net472" />
+  <package id="Tekla.Structures.Model" version="2021.0.0" targetFramework="net472" />
 </packages>
