--- a/ExtensionMethods/ExtensionMethods.csproj
+++ b/ExtensionMethods/ExtensionMethods.csproj
@@ -53,6 +53,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="GemetryExtensions.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TeklaExtensionMethods.cs" />
   </ItemGroup>
