--- a/TestingConsole/packages.config
+++ b/TestingConsole/packages.config
@@ -1,6 +1,14 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Tekla.Structures" version="2021.0.0" targetFramework="net472" />
-  <package id="Tekla.Structures.Datatype" version="2021.0.0" targetFramework="net472" />
-  <package id="Tekla.Structures.Model" version="2021.0.0" targetFramework="net472" />
+  <package id="System.Buffers" version="4.5.1" targetFramework="net472" />
+  <package id="System.Memory" version="4.5.5" targetFramework="net472" />
+  <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net472" />
+  <package id="System.Reflection.Emit.Lightweight" version="4.7.0" targetFramework="net472" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="6.0.0" targetFramework="net472" />
+  <package id="Tekla.Common.Geometry" version="4.6.2" targetFramework="net472" />
+  <package id="Tekla.Structures" version="2024.0.2" targetFramework="net472" />
+  <package id="Tekla.Structures.Datatype" version="2024.0.2" targetFramework="net472" />
+  <package id="Tekla.Structures.Model" version="2024.0.2" targetFramework="net472" />
+  <package id="Tekla.Technology.Serialization" version="4.1.1" targetFramework="net472" />
+  <package id="Trimble.Remoting" version="1.0.2" targetFramework="net472" />
 </packages>
