--- a/DimmentionMaker/DimmentionMaker.csproj
+++ b/DimmentionMaker/DimmentionMaker.csproj
@@ -35,19 +35,82 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Runtime.Remoting" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Data" />
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Xml" />
+    <Reference Include="Tekla.Structures, Version=2023.0.0.0, Culture=neutral, PublicKeyToken=2f04dbe497b71114, processorArchitecture=MSIL">
+      <HintPath>..\packages\Tekla.Structures.2023.0.1\lib\net40\Tekla.Structures.dll</HintPath>
+    </Reference>
+    <Reference Include="Tekla.Structures.Catalogs, Version=2023.0.0.0, Culture=neutral, PublicKeyToken=2f04dbe497b71114, processorArchitecture=MSIL">
+      <HintPath>..\packages\Tekla.Structures.Catalogs.2023.0.1\lib\net40\Tekla.Structures.Catalogs.dll</HintPath>
+    </Reference>
+    <Reference Include="Tekla.Structures.Datatype, Version=2023.0.0.0, Culture=neutral, PublicKeyToken=2f04dbe497b71114, processorArchitecture=MSIL">
+      <HintPath>..\packages\Tekla.Structures.Datatype.2023.0.1\lib\net40\Tekla.Structures.Datatype.dll</HintPath>
+    </Reference>
+    <Reference Include="Tekla.Structures.Dialog, Version=2023.0.0.0, Culture=neutral, PublicKeyToken=2f04dbe497b71114, processorArchitecture=MSIL">
+      <HintPath>..\packages\Tekla.Structures.Dialog.2023.0.1\lib\net40\Tekla.Structures.Dialog.dll</HintPath>
+    </Reference>
+    <Reference Include="Tekla.Structures.Drawing, Version=2023.0.0.0, Culture=neutral, PublicKeyToken=2f04dbe497b71114, processorArchitecture=MSIL">
+      <HintPath>..\packages\Tekla.Structures.Drawing.2023.0.1\lib\net40\Tekla.Structures.Drawing.dll</HintPath>
+    </Reference>
+    <Reference Include="Tekla.Structures.Model, Version=2023.0.0.0, Culture=neutral, PublicKeyToken=2f04dbe497b71114, processorArchitecture=MSIL">
+      <HintPath>..\packages\Tekla.Structures.Model.2023.0.1\lib\net40\Tekla.Structures.Model.dll</HintPath>
+    </Reference>
+    <Reference Include="Tekla.Structures.Plugins, Version=2023.0.0.0, Culture=neutral, PublicKeyToken=2f04dbe497b71114, processorArchitecture=MSIL">
+      <HintPath>..\packages\Tekla.Structures.Plugins.2023.0.1\lib\net40\Tekla.Structures.Plugins.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Commands\AddDimmensionCommand.cs" />
+    <Compile Include="Commands\AddOverallDimCommand.cs" />
+    <Compile Include="Commands\AddOverallBottomDimCommand.cs" />
+    <Compile Include="Commands\ClearDimmensionsCommand.cs" />
+    <Compile Include="Creators\EmbedDimmensionCommandCreator.cs" />
+    <Compile Include="Creators\FrontViewCommandCreator.cs" />
+    <Compile Include="Commands\ResetCoordinateSystemCommand.cs" />
+    <Compile Include="Creators\OpeningCommandCreator.cs" />
+    <Compile Include="Interfaces\ICommandCreator.cs" />
+    <Compile Include="Interfaces\IDimmensionCommand.cs" />
+    <Compile Include="Models\AttributeProvider.cs" />
+    <Compile Include="Models\DimmensionCommandQueue.cs" />
+    <Compile Include="Models\DimmensionLineCreator.cs" />
+    <Compile Include="Models\Dirrections.cs" />
+    <Compile Include="Models\FileGenerator.cs" />
+    <Compile Include="Models\Utils.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+    <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Resources\element_catalog_cross_section.bmp" />
+    <Content Include="Resources\element_catalog_cross_section_sketch.bmp" />
+    <Content Include="Resources\element_catalog_cross_section_user.bmp" />
+    <Content Include="Resources\prtyp_tree_1.bmp" />
+    <Content Include="Resources\prtyp_tree_10.bmp" />
+    <Content Include="Resources\prtyp_tree_11.bmp" />
+    <Content Include="Resources\prtyp_tree_13.bmp" />
+    <Content Include="Resources\prtyp_tree_15.bmp" />
+    <Content Include="Resources\prtyp_tree_2.bmp" />
+    <Content Include="Resources\prtyp_tree_3.bmp" />
+    <Content Include="Resources\prtyp_tree_4.bmp" />
+    <Content Include="Resources\prtyp_tree_5.bmp" />
+    <Content Include="Resources\prtyp_tree_6.bmp" />
+    <Content Include="Resources\prtyp_tree_7.bmp" />
+    <Content Include="Resources\prtyp_tree_8.bmp" />
+    <Content Include="Resources\prtyp_tree_9.bmp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\ExtensionMethods\ExtensionMethods.csproj">
+      <Project>{b94799fc-ff52-4b67-9826-37b82cdadd16}</Project>
+      <Name>ExtensionMethods</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
